# IoTomatoes

./: .gitignore  CatalogManager.py  CheckResult.py  CloudConnection.py  CompanyList.json  ConsumptionService.py  CustomOutput.json  FakeActuatorCommands.py  FakeSensors.py  FaultDetectionService_settings.json  IrrigationInput.json  LightingInput.json  LightingInputNew.json  LightingOutput.json  LightingOutputNew.json  README.md  WeatherApp.py  WeatherApp_old.py  WeatherInput.json  WeatherOutput.json  deviceSetting.json  docker-compose.prod.yml  docker-compose.yml  new_service.json  provajson.json  pyrightconfig.json  serviceSetting.json
Catalog/: CatalogItem.py  CatalogManager.py  CustomExceptions.py  Devices.py  GenericEndPoints.py  GenericResource.py  GenericService.py  ItemInfo.py  ResourceCatalog.py  ResourceCatalogSettings.json  ServiceCatalog.json  ServiceCatalog.py  ServiceCatalogSettings.json  TelegramBot.py  new_device.json  new_service.json  new_user.json
CloudConnection/: CloudConnection.py  settings.json
ConsumptionManager/: ConsumptionManager.py  ConsumptionServiceSettings.json  Dockerfile
ConsumptionService/: ConsAlgorithm.py  Consumption.csv  ConsumptionService.py  ConsumptionService_settings.json
Devices/: README.md
Doc/: README.md  ResourceCatalog.json  ServiceCatalog.json  ServiceCatalogSettings.json
FaultDetection/: Dockerfile  FaultDetection.py
FaultDetectionService/: FaultDetService.py  FaultDetection.py  FaultDetectionServiceSettings.json  FaultDetectionService_settings.json
GenericClasses/: CatalogManager.py  GenericEndPoints.py  ItemInfo.py
IoTomatoes_Platform/: README.md  docker-compose.yml  nginx.conf
IoTomatoes_SupportPackage/: README.md  pyproject.toml
IoTomatoes_SupportPackage/src/iotomatoes_supportpackage/: AmbientSimulator.py  BaseResource.py  BaseService.py  DeviceManager.py  GPSgenerator.py  GenericEndpoint.py  IoTDevice.py  ItemInfo.py  MQTTClient.py  MyExceptions.py  MyIDGenerator.py  MyThread.py  RefreshThread.py  __init__.py
IoTomatoes_package/: README.md  pyproject.toml
Localization/: GPSPublisher.py  TraceGenerator.py  settingsTraceGenerator.json  settingsTruck.json  trace.json
ResourceCatalog/: Dockerfile  ResourceCatalog.json  ResourceCatalog.py  ResourceCatalogSettings.json
Sensors/: AmbientSimulator.py  Devices.py  DevicesSettings.json  IoTDevice.py
ServiceCatalog/: Dockerfile  ServiceCatalog.json  ServiceCatalog.py  ServiceCatalogSettings.json  requirements.txt
Smart Lighting/: SmartLighting.py  Smart_Lighting.py  lightInformation.json  lightInformationDefault.json  lightSensor.py
(+205 files in other folders)
