[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "IoTomatoes_SupportPackage"
version = "0.0.4"
authors = [
  { name="Matteo Sperti", mail="matteo.sperti@studenti.polito.it"},
  { name="Luca Zanetti"},
  { name="Andrea Usai"},
  { name="Federico Moscato"}
]
description = "Small IoT support package for IoTomatoes project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Matteo-Sperti/IoTomatoes"
"Bug Tracker" = "https://github.com/Matteo-Sperti/IoTomatoes/issues"