[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "IoTomatoes_SupportPackage"
version = "0.0.10"
authors = [
  { name="Matteo Sperti", mail="matteo.sperti@studenti.polito.it"},
  { name="Luca Zanetti", mail="luca.zanett.99@gmail.com"},
  { name="Andrea Usai", mail="andreausai98.lavoro@gmail.com"},
  { name="Federico Moscato", mail="federico.moscato22@gmail.com"}
]
description = "Small IoT support package for IoTomatoes project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Matteo-Sperti/IoTomatoes"
"Bug Tracker" = "https://github.com/Matteo-Sperti/IoTomatoes/issues"